# srer

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.pgsql  README.md  compose.yml  docker-compose.yml  photo_station_list.csv  pyproject.toml  repeat_photography_metadata.json  requirements.txt
api/: schema.py  urls.py
data/: precip2025-08.xlsx  preciplayout.docx  precipnotes.docx  repeat_photography_metadata.json
data/srer/: repeat_photography_metadata.json
precip/: admin.py  apps.py  models.py  urls.py  views.py
precip/migrations/: 0001_initial.py
precip/templates/: index.html
project/: settings.py  urls.py
scripts/: convert_coords.py  run_dev_server.py  srer_photostations.csv  srer_photostations.py  srer_precip.py  srer_raingages.py
src/srer/: __init__.py  cli.py  description_generator.py  image_similarity.py
static/js/: application.js
templates/layouts/: default.html
