[project]
name = "srer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "acatejr@gmail.com", email = "acatejr@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "typer>=0.9.0",
]

[project.scripts]
srer = "srer.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
