[project]
name = "srer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "acatejr@gmail.com", email = "acatejr@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "typer>=0.9.0",
    "pillow>=10.0.0",
    "imagehash>=4.3.1",
    "numpy>=1.24.0",
    "anthropic>=0.18.0",
    "ollama>=0.1.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
srer = "srer.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]
